public/default.css
body {
  background: #f5f8fa;
  z-index: 0;
  font-size: 12px;
  font-family: inherit;
  font-weight: 1;
}


#logo {
  color: #ffffb2;
  font-size: 30px;
  padding-left: 0;
  /*margin-left: -15;*/
}

.navbar-default .navbar-nav>.active>a:hover {
    color: #fff;
    background-color: #3097d1;
}
p {
  font-family: "RooneySans-Regular", "Lucida Grande", "Lucida Sans Unicode", "Trebuchet MS", sans-serif;
  font-size: 16px;
}

.list-group-item.side {
  border: 0px solid #fff;
  padding-top: 5px;
  padding-bottom: 5px;
}

.list-group-item.follow-side {
  border: 0px solid #fff;
}

.list-group-item.side:hover {
  background-color: #f5f8fa;
}

.well {
  background-color: #fff;
}

.landing-image-div {
  width: 110vw;
  height: 100vw;
  position: fixed;
  opacity: .4;
  z-index: -500;
}

h1.landing-title {
  font-size: 6vw;
  color: white;
  padding-top: 1vw;
  z-index: 1000;
  opacity: 1;
}


#landing-title-div {
  position: fixed;
  width: 100%;
  margin-top: -25px;
  height: 13vw;
  background-color: #555;
  opacity: 0.8;
}

#landing-title-col.col-xs-12 {
  padding-right: 0;
  padding-left: 0;
}

.jumbotron {
  background-color: transparent;
}

div.dashboard {
    margin-top: 0;
}

h7.preview-list {
  padding: 1px;
  background-color: #f5f8fa;
}

.hover-tabs:hover {
  cursor: hand;
  color: #fff;
}


.minus:hover {
  cursor: hand;
}

.minus {
  position: absolute;
  color: #3097d1;
  right: 15;
  top: 0;
  padding-right: 5px;
}

div.dashboard-list {
  padding: 0;
}
.dashboard-list:hover {
  background-color: #f5f8fa;
  cursor: hand;
}

.following-preview {
  position: absolute;
  padding: 0;
  top: -125px;
  left: 0;
  z-index: 1000;
}

.preview-width {
  width: 350px;
}

form#tweet-form2 {
  margin-top: 10px;
  margin-bottom: 10px;
}

p#timeline-username {
  margin: 0;
  margin-bottom: 5px;

}

h2#timeline-name {
  margin-top: 5px;
  margin-bottom: 0;
}

.yellow {
  color: #ffffb2;
}

.hashtag-bold {
  font-size: 13px;
}
#landing-signup {
  background-color: green;
}

#landing-login {
  background-color: #2154A5;
}

.landing-buttons {
  padding: 20px;
  font-size: 50px;
  margin-top: 20px;
  margin-bottom: 20px;
  color: white;
  border-radius: 10px;
  width: 375px;
}



#landing-login:hover {
  background-color: #133263;
  cursor: hand;
}

#landing-signup:hover {
  background-color: #005900;
  cursor:hand;
}

.btn-default {
  margin-left: 5px;
  border-radius: 5px;
}

.btn {
  background-color: #fff;
  color: #1c73a5;
  border-radius: 3px;
  border: 1px solid #3079ed;
}

.btn:hover {
  background-color: #2a88bd;
  color: #fff;
}

.thumbnail {
  margin-top: 20px;
  margin-bottom: 0;
  width: auto;
}
  /*color: #337ab7;*/

.thumbnail .caption {
  padding: 0;
}

.panel {
  font-family: inherit;
  background-color: #fff;
}

.message-padding {
  margin-left: 10px;
}

.timeline-tab-padding {
  padding-top: 20px;
  padding-left: 35px;
  padding-right: 35px;
  padding-bottom: 20px;
  left: 0;
  right: 0;
  font-size: 20px;
}

.navbar {
  background-color: #3097d1;
  font-size: 14px;
  /*border-color: #1c73a5;*/
}

#search-input {
  width: 225px;
}


.active {
  color: #fff;
}

.navbar-default {
  border-color: transparent;
}

.navbar-default .navbar-nav>.active>a {
  background-color: #3097d1;
  color: white;
}

.navbar-default .navbar-nav>li>a {
  color: #e5e5e5;
}
.navbar-default .navbar-nav>li>a:hover {
  color: #fff;
}

.navbar-default .navbar-brand {
  color: #e5e5e5;
}

.not-chosen {
  color: #3097d1;
  background-color: #fff;
}

.chosen {
  color: #fff;
  background-color:  #3097d1;
}

.chosen:hover {
  cursor: hand;
  color: #fff;
  background-color: #3097d1;
}

.not-chosen:hover {
  cursor:hand;
  color: #fff;
  background-color: #3097d1;
}


.modal-dialog {
  width: 400px;
}

#sign-in-text {
  color: #fff;
}

.modal-content {
  background-color: #fff;
}

.modal-header {
  background-color: #3097d1;
  color: white;
}

.send-message {
  background-color: #3097d1;
  color: #fff;
}
.send-message:hover {
  background-color: #1c5a7d;
}

#signup-button {
  margin-left: 0;
}

.modal-footer {
  background-color: #fff;
}

.the-modal-body {
  max-height: 300px;
  overflow: auto;
  background-color: #fff;
}

#landing-cover {
  background-image: url();
  height: 22vw;
  margin-left: -200px;
  width: 150%;
  border: 0px solid black;
  background-color: #777;
}

.yellow-gradient {
  background-image: url(images/cover1.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  /*background: linear-gradient(135deg, #b8c6df 0%,#6d88b7 100%);*/
}
.green-gradient {
  background-image: url(images/cover2.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  /*background: linear-gradient(135deg, #b4ddb4 1%,#83c783 17%,#52b152 33%,#008a00 67%,#005700 83%,#002400 100%);*/
}

.grey-gradient {
  background-image: url(images/cover3.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  /*background: linear-gradient(135deg, #d8e0de 0%,#aebfbc 22%,#99afab 33%,#8ea6a2 50%,#829d98 67%,#4e5c5a 82%,#0e0e0e 100%);*/
}

.blue-gradient {
  background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
}

.five-cover {
  background-image: url(images/cover5.jpg);
  background-repeat: no-repeat;
  background-size: cover;
}
.six-cover {
  background-image: url(images/cover6.jpg);
  background-repeat: no-repeat;
  background-size: cover;
}
.seven-cover {
  background-image: url(images/cover7.jpg);
  background-repeat: no-repeat;
  background-size: cover;
}
.eight-cover {
  background-image: url(images/cover8.jpg);
  background-repeat: no-repeat;
  background-size: cover;
}
.nine-cover {
  background-image: url(images/cover9.jpg);
  background-repeat: no-repeat;
  background-size: cover;
}
.ten-cover {
  background-image: url(images/cover10.jpg);
  background-repeat: no-repeat;
  background-size: cover;
}
.eleven-cover {
  background-image: url(images/cover11.jpg);
  background-repeat: no-repeat;
  background-size: cover;
}
.twelve-cover {
  background-image: url(images/cover12.jpg);
  background-repeat: no-repeat;
  background-size: cover;
}

.nav {
  text-align: center;
}

.italic {
  font-style: italic;
}

#timeline-cover {
  height: 475px;
  width: 200%;
}

.timeline-colors {
  color: #fff;
}

.following-margin {
  margin-top: 20px;
}

h3.media-heading {
  background-color: #eee;
}



h5.media-heading {
  background-color: #eee;
}

img.center {
  display: block;
  margin: 0 auto;
  position: relative;
}

/*#timeline-tabs.center {
    display: block;
    margin: 0 auto;
    position: relative;
}*/

#timeline-card {
  position: absolute;
  /*position: relative;*/
  top: 50%;
  transform: translateY(-50%);
  left: 0;
  right: 0;
}

/*#timeline-name {
  color: black;
}*/

#login-row {
  position: fixed;
  left: 0;
  right: 0;
  margin-top: 45px;
}

#signup-row {
  margin-top: 35px;
}

/*#form-row {
  margin-top: 15vw;
}*/

/*#signup-form-row {
  margin-top: 15vw;
}*/


#chirp-button {
  margin-top: 6px;
  /*padding-right: 15px;*/
}


.search-form {
  border-radius: 5px;
  border: 1px solid #e5e5e5;
  margin-left: -30px;
}

.chirp-form {
  border-radius: 5px;
  border: 1px solid;
  margin-left: 0px;

}

#tweet-input2 {
  margin:0;
  margin-right: -10px;
}

#message-input {
  margin-right: -10px;
}

.chirp-button {
  padding-top: 7px;
  background-color: #3097d1;
  color: #e5e5e5;
  border: 0px;
}

.chirp-button:hover {
  color: #fff;
}

#login-button {
  margin-left: 0;
}

.submit-tweet2 {
  margin-top: 10px;
  /*border-radius: 5px;*/
  width: 150px;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 20px;
}


.navbar-form .form-control {
    display: inline-block;
    width: 40vw;
    vertical-align: middle;
}

.form-inline .form-control {
    display: inline-block;
    width: 20vw;
    vertical-align: middle;
}

.text-center {
  text-align: center;
}


.tweets-div {
  max-height: 220%;
  overflow: auto;
}


.submit {
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
  background-color: #2a88bd;
  color: #fff;
}

.submit:hover {
  cursor: hand;
  background-color: #2a88bd;

}

.navbar {
  margin-bottom: 0;
}

.input-group-addon {
  height: 34px;
  width: 45px;
}


#notifications-panel {
  position: fixed;
  top: 0;
  right: 0;
  width: 500px;
  z-index: 1000;
}

.hover:hover {
  -webkit-transform: scale(1.5);
  -moz-transform: scale(1.5);
  -ms-transform: scale(1.5);
  -o-transform: scale(1.5);
  transform: scale(1.5);
  border: 0px solid #fff;
  cursor: hand;
}

.hover-following:hover {
  cursor: hand;
  color: #36a2ff;
}

.hover-hashtag:hover {
  cursor: hand;
  color: #3097d1;
  text-decoration: underline;
}

.user-hover:hover {
  border: 0.5px solid #fff;
  cursor: hand;
}

.favorites-padding {
  padding-left: 10px;
  padding-right: 5px;
}

.repost-padding {
  padding-left: 15px;
  padding-right: 5px;
}

.navtab-color {
  color: #1c73a5;
}

#timeline-width.col-xs-12 {
  padding-right: 0;
  padding-left: 0;
}


#timeline-image {
  width: 175px;
  height: 175px;
}

@media (max-width: 1000px) {
  #search {
    margin-left: 10%;
  }


/*@media (max-width: 600px) {
  #timeline-image {
    position: relative;
    top: 72px;
    left: -50px;
    width: 100px;
    height: 100px;
  }
  #timeline-name {
    position: relative;
    left: 50px;
    background-color: transparent;

  }
  #timeline-username {
    background-color: transparent;
    position: relative;
    left: 50px;
  }
}*/


/*.grey {
  background-color: blue;
}*/


.follow-panel {
  margin-top: 125px;
}

.icon-right {
  float: right;
  padding-bottom: 10px;
}




.twa {
  display: inline-block;
  height: 1em;
  width: 1em;
  margin: 0 .05em 0 .1em;
  vertical-align: -0.1em;
  background-repeat: no-repeat;
  background-position: center center;
  background-size: 1em 1em; }

.twa-lg {
  height: 1.33em;
  width: 1.33em;
  margin: 0 0.0665em 0 0.133em;
  vertical-align: -0.133em;
  background-size: 1.33em 1.33em; }

.twa-2x {
  height: 2em;
  width: 2em;
  margin: 0 0.1em 0 0.2em;
  vertical-align: -0.2em;
  background-size: 2em 2em; }

.twa-3x {
  height: 3em;
  width: 3em;
  margin: 0 0.15em 0 0.3em;
  vertical-align: -0.3em;
  background-size: 3em 3em; }

.twa-4x {
  height: 4em;
  width: 4em;
  margin: 0 0.2em 0 0.4em;
  vertical-align: -0.4em;
  background-size: 4em 4em; }

.twa-5x {
  height: 5em;
  width: 5em;
  margin: 0 0.25em 0 0.5em;
  vertical-align: -0.5em;
  background-size: 5em 5em; }

  .twa-20x {
    height: 20em;
    width: 20em;
    margin: 0 0.25em 0 0.5em;
    vertical-align: -0.20em;
    background-size: 20em 20em; }



    .twa-bird {
      background-image: url("https://twemoji.maxcdn.com/svg/1f426.svg"); }

    .twa-baby-chick {
      background-image: url("https://twemoji.maxcdn.com/svg/1f424.svg"); }

    .twa-hatched-chick {
      background-image: url("https://twemoji.maxcdn.com/svg/1f425.svg"); }

    .twa-hatching-chick {
      background-image: url("https://twemoji.maxcdn.com/svg/1f423.svg"); }

    .twa-chicken {
      background-image: url("https://twemoji.maxcdn.com/svg/1f414.svg"); }

    .twa-penguin {
      background-image: url("https://twemoji.maxcdn.com/svg/1f427.svg"); }

    .twa-rooster {
      background-image: url("https://twemoji.maxcdn.com/svg/1f413.svg"); }*/

